chore: fix lint

--- a/packages/storybook-html/stories/components/navigation/local-nav/local-nav.docs.mdx
+++ b/packages/storybook-html/stories/components/navigation/local-nav/local-nav.docs.mdx
@@ -37,12 +37,20 @@ back chevron.
       </a>
     </div>
     <div className="uq-local-nav__grandparent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research capabilities and initiatives">
+      <a
+        className="uq-local-nav__link"
+        href="#"
+        aria-label="Back to Research capabilities and initiatives"
+      >
         Research capabilities and initiatives
       </a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Energy network">
+      <a
+        className="uq-local-nav__link"
+        href="#"
+        aria-label="Back to Energy network"
+      >
         Energy network
       </a>
     </div>
@@ -242,7 +250,11 @@ shown and a new Parent and Grandparent element are added.
       </a>
     </div>
     <div className="uq-local-nav__parent">
-      <a className="uq-local-nav__link" href="#" aria-label="Back to Research capabilities and initiatives">
+      <a
+        className="uq-local-nav__link"
+        href="#"
+        aria-label="Back to Research capabilities and initiatives"
+      >
         Research capabilities and initiatives
       </a>
     </div>
