chore: update reg screenshot list

--- a/packages/storybook-html/stories/components/section/section.docs.mdx
+++ b/packages/storybook-html/stories/components/section/section.docs.mdx
@@ -75,19 +75,21 @@ Modifier class: `.uq-section--shaded`
 
 <Canvas withSource="none">
   <div class="uq-section">
-    <div class="uq-section__header">
-      <h2 class="uq-section__title">Title</h2>
-      <div class="uq-section__description">
-        <p>Description</p>
+    <div class="uq-container">
+      <div class="uq-section__header">
+        <h2 class="uq-section__title">Title</h2>
+        <div class="uq-section__description">
+          <p>Description</p>
+        </div>
       </div>
-    </div>
-    <div class="uq-card-grid uq-card-grid--target-3x">
-      <div class="uqds-layout-demo-card"></div>
-      <div class="uqds-layout-demo-card"></div>
-      <div class="uqds-layout-demo-card"></div>
-      <div class="uqds-layout-demo-card"></div>
-      <div class="uqds-layout-demo-card"></div>
-      <div class="uqds-layout-demo-card"></div>
+      <div class="uq-card-grid uq-card-grid--target-3x">
+        <div class="uqds-layout-demo-card"></div>
+        <div class="uqds-layout-demo-card"></div>
+        <div class="uqds-layout-demo-card"></div>
+        <div class="uqds-layout-demo-card"></div>
+        <div class="uqds-layout-demo-card"></div>
+        <div class="uqds-layout-demo-card"></div>
+      </div>
     </div>
   </div>
 </Canvas>
